tests/api/reference/negative/13-json-negative-integer.asm
const invalid = json.parse("-1")
